--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "flipbox/lumen-generator": "^9.1",
         "guzzlehttp/guzzle": "^7.5",
         "laravel/lumen-framework": "^8.3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "league/flysystem": "^1.1",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^9.5.10"
     },
